# HDivRefactor

./: .gitignore  CMakeLists.txt  README.md
Mathematica/: HdivBasisFunctions.nb  filterTest.nb  rankingTest.nb
src/: CMakeLists.txt  TPZShapeHDivRefactor.cpp  TPZShapeHDivRefactor.h  dirs_config.h
targets/: CMakeLists.txt  ConvergenceH1Prism.cpp  FunctionCountingHcurl.cpp  TestExpandedMatrixRank.cpp
